--- a/roles/desktop_templates/files/index.html
+++ b/roles/desktop_templates/files/index.html
@@ -6,14 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <style>
-      html {
+      *,
+      ::before,
+      ::after {
         box-sizing: border-box;
+        margin: 0;
+        padding: 0;
       }
 
-      *,
-      *::before,
-      *::after {
-        box-sizing: inherit;
+      ol,
+      ul {
+        list-style: none;
       }
     </style>
     <script>
